# qode-clarity

./: .gcloudignore  .gitignore  CNAME  README.md  _config.yml  asset-manifest.json  big-smoke.py  bigsmoke_userflow_chart.mmd  index.html  requirements.txt
backend/: .env  CUsersadmin.configgitconfig  Dockerfile  app.yaml  manage.py  mongodb.py  pyproject.toml  requirements.txt
backend/code_clarity/: asgi.py  settings.py  urls.py  wsgi.py
backend/code_clarity_app/: apps.py  urls.py  utils.py  views.py
backend/code_clarity_app/backends/: mongodb_backend.py
backend/code_clarity_app/management/commands/: run_solution.py
backend/code_clarity_app/question_bank/unclassified yet/: create_structure.py  python_create_python_files.py
backend/code_clarity_fastapi/: settings.py
backend/code_clarity_fastapi/app/: database.py  db_update_diagnostic.py  file_manager.py  main.py  models.py  schemas.py
backend/code_clarity_fastapi/app/routes/: __init__.py  routes.py
backend/code_clarity_fastapi/scripts/: generate_categories.py
backend/python_query_vault/: asgi.py  settings.py  urls.py  wsgi.py
backend/qode_clarity_fastapi/: settings.py  venv_instructions.md
backend/qode_clarity_fastapi/app/: database.py  db_update_diagnostic.py  file_manager.py  firebase_client.py  main.py  migrate_data.py  models.py  repository.py  routes.py  schemas.py
backend/qode_clarity_fastapi/scripts/: generate_categories.py  migrate_to_firestore.py
backend/questions/: urls.py  utils.py  views.py
backend/questions/management/commands/: run_solution.py
(+608 files in other folders)
